--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fvY-Cv-gog">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
@@ -14,26 +14,26 @@
             <objects>
                 <viewController title="ImageList" id="BYZ-38-t0r" customClass="ImagesListViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="vxH-dN-Qoj">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                                 <color key="backgroundColor" name="#1A1B22"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ImagesListCell" rowHeight="200" id="jPS-FZ-jrd" customClass="ImagesListCell" customModule="ImageFeed" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="50" width="414" height="200"/>
+                                        <rect key="frame" x="0.0" y="50" width="393" height="200"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="jPS-FZ-jrd" id="H6G-nO-J6T">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="200"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="200"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="j8f-OO-dYw">
-                                                    <rect key="frame" x="16" y="4" width="382" height="192"/>
+                                                    <rect key="frame" x="16" y="4" width="361" height="192"/>
                                                     <color key="backgroundColor" name="#1A1B22"/>
                                                 </imageView>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E46-Zi-snG" userLabel="LikedButton">
-                                                    <rect key="frame" x="354" y="4" width="44" height="44"/>
+                                                    <rect key="frame" x="333" y="4" width="44" height="44"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="44" id="XdO-nG-oky"/>
                                                         <constraint firstAttribute="width" constant="44" id="zFU-38-aek"/>
@@ -43,7 +43,7 @@
                                                     <state key="normal" image="No Active"/>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sAx-Nx-ww6" userLabel="LabelCell">
-                                                    <rect key="frame" x="24" y="172" width="101.5" height="16"/>
+                                                    <rect key="frame" x="24.000000000000007" y="172" width="101.66666666666669" height="16"/>
                                                     <attributedString key="attributedText">
                                                         <fragment content="27 августа 2022">
                                                             <attributes>
@@ -108,12 +108,23 @@
             <objects>
                 <viewController modalPresentationStyle="fullScreen" id="bBt-rB-8fA" customClass="SingleImageViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="mEm-TD-Hjy">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="wD0-4f-aCd">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                            </imageView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EQ5-Lt-lFh">
+                                <rect key="frame" x="-20" y="-20" width="433" height="892"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="wD0-4f-aCd">
+                                        <rect key="frame" x="20" y="8" width="393" height="852"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                </subviews>
+                                <viewLayoutGuide key="contentLayoutGuide" id="D84-Gk-YJl"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="P6n-Hi-GHp"/>
+                                <connections>
+                                    <outlet property="delegate" destination="bBt-rB-8fA" id="53c-ZU-0b7"/>
+                                </connections>
+                            </scrollView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Xh-BN-fgt">
                                 <rect key="frame" x="9" y="11" width="44" height="44"/>
                                 <constraints>
@@ -131,21 +142,22 @@
                         <color key="backgroundColor" name="#1A1B22"/>
                         <constraints>
                             <constraint firstItem="0Xh-BN-fgt" firstAttribute="top" secondItem="g9Y-sA-hN2" secondAttribute="top" constant="11" id="87s-nh-gxo"/>
-                            <constraint firstItem="wD0-4f-aCd" firstAttribute="leading" secondItem="mEm-TD-Hjy" secondAttribute="leading" id="F0D-5i-lNq"/>
+                            <constraint firstItem="EQ5-Lt-lFh" firstAttribute="top" secondItem="mEm-TD-Hjy" secondAttribute="top" constant="-20" id="KKh-mZ-bXw"/>
                             <constraint firstItem="0Xh-BN-fgt" firstAttribute="leading" secondItem="g9Y-sA-hN2" secondAttribute="leading" constant="9" id="LIY-eB-eJf"/>
-                            <constraint firstItem="wD0-4f-aCd" firstAttribute="top" secondItem="mEm-TD-Hjy" secondAttribute="top" id="idJ-hW-7UA"/>
-                            <constraint firstAttribute="trailing" secondItem="wD0-4f-aCd" secondAttribute="trailing" id="rW7-QA-q8N"/>
-                            <constraint firstAttribute="bottom" secondItem="wD0-4f-aCd" secondAttribute="bottom" id="vu7-TN-Vmg"/>
+                            <constraint firstItem="EQ5-Lt-lFh" firstAttribute="leading" secondItem="g9Y-sA-hN2" secondAttribute="leading" id="gTL-0F-XdA"/>
+                            <constraint firstItem="g9Y-sA-hN2" firstAttribute="trailing" secondItem="EQ5-Lt-lFh" secondAttribute="trailing" id="hQC-Ne-Hgx"/>
+                            <constraint firstAttribute="bottom" secondItem="EQ5-Lt-lFh" secondAttribute="bottom" constant="-20" id="jae-bp-tfS"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="D8N-BW-aCb"/>
                     <connections>
                         <outlet property="imageView" destination="wD0-4f-aCd" id="u7K-qU-lXp"/>
+                        <outlet property="scrollView" destination="EQ5-Lt-lFh" id="r8A-q8-9f5"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NmB-ZA-78R" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-6" y="-232"/>
+            <point key="canvasLocation" x="-693.89312977099235" y="-222.53521126760563"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="bUa-Km-xaD">
@@ -173,18 +185,18 @@
             <objects>
                 <viewController storyboardIdentifier="ProfileViewController" id="FCW-aR-6IU" customClass="ProfileViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Xk6-B9-AYe">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Photo" translatesAutoresizingMaskIntoConstraints="NO" id="wpg-rm-7me">
-                                <rect key="frame" x="16" y="80" width="70" height="70"/>
+                                <rect key="frame" x="16" y="91" width="70" height="70"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="70" id="7xx-dS-CKH"/>
                                     <constraint firstAttribute="width" secondItem="wpg-rm-7me" secondAttribute="height" multiplier="1:1" id="loY-eh-iJF"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="left" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="kRz-8k-8kB" userLabel="Label Stack View">
-                                <rect key="frame" x="16" y="158" width="382" height="70"/>
+                                <rect key="frame" x="16" y="169" width="361" height="70"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Екатерина Новикова" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rkw-Md-AQh">
                                         <rect key="frame" x="0.0" y="0.0" width="235" height="18"/>
@@ -197,7 +209,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@ekaterina_nov" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IWW-NP-AV6">
-                                        <rect key="frame" x="0.0" y="26" width="122.5" height="18"/>
+                                        <rect key="frame" x="0.0" y="26" width="122.33333333333333" height="18"/>
                                         <constraints>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="99" id="1Ff-4y-8J3"/>
                                             <constraint firstAttribute="height" constant="18" id="ZCU-iw-QmD"/>
@@ -207,7 +219,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello, world!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oPb-Rn-HP3">
-                                        <rect key="frame" x="0.0" y="52" width="94.5" height="18"/>
+                                        <rect key="frame" x="0.0" y="52" width="94.666666666666671" height="18"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="18" id="bJz-J5-BB7"/>
                                         </constraints>
@@ -218,7 +230,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qr8-8E-i0J">
-                                <rect key="frame" x="354" y="93" width="44" height="44"/>
+                                <rect key="frame" x="333" y="104" width="44" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="mcZ-L2-4GM"/>
                                     <constraint firstAttribute="width" constant="44" id="vT8-2g-V0P"/>
