--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -111,7 +111,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EQ5-Lt-lFh">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" placeholderIntrinsicWidth="414" placeholderIntrinsicHeight="414" translatesAutoresizingMaskIntoConstraints="NO" id="EQ5-Lt-lFh">
                                 <rect key="frame" x="-20" y="-20" width="433" height="892"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="wD0-4f-aCd">
@@ -150,13 +150,13 @@
                         <color key="backgroundColor" name="#1A1B22"/>
                         <constraints>
                             <constraint firstItem="0Xh-BN-fgt" firstAttribute="top" secondItem="g9Y-sA-hN2" secondAttribute="top" constant="11" id="87s-nh-gxo"/>
-                            <constraint firstItem="EQ5-Lt-lFh" firstAttribute="top" secondItem="mEm-TD-Hjy" secondAttribute="top" constant="-20" id="KKh-mZ-bXw"/>
+                            <constraint firstItem="EQ5-Lt-lFh" firstAttribute="top" secondItem="mEm-TD-Hjy" secondAttribute="top" id="KKh-mZ-bXw"/>
                             <constraint firstItem="0Xh-BN-fgt" firstAttribute="leading" secondItem="g9Y-sA-hN2" secondAttribute="leading" constant="9" id="LIY-eB-eJf"/>
                             <constraint firstItem="3Fe-yq-XBE" firstAttribute="leading" secondItem="g9Y-sA-hN2" secondAttribute="leading" constant="162" id="Pk1-eH-VoR"/>
                             <constraint firstItem="g9Y-sA-hN2" firstAttribute="bottom" secondItem="3Fe-yq-XBE" secondAttribute="bottom" constant="50" id="dgT-Db-i5R"/>
                             <constraint firstItem="EQ5-Lt-lFh" firstAttribute="leading" secondItem="g9Y-sA-hN2" secondAttribute="leading" id="gTL-0F-XdA"/>
                             <constraint firstItem="g9Y-sA-hN2" firstAttribute="trailing" secondItem="EQ5-Lt-lFh" secondAttribute="trailing" id="hQC-Ne-Hgx"/>
-                            <constraint firstAttribute="bottom" secondItem="EQ5-Lt-lFh" secondAttribute="bottom" constant="-20" id="jae-bp-tfS"/>
+                            <constraint firstAttribute="bottom" secondItem="EQ5-Lt-lFh" secondAttribute="bottom" id="jae-bp-tfS"/>
                             <constraint firstItem="g9Y-sA-hN2" firstAttribute="trailing" secondItem="3Fe-yq-XBE" secondAttribute="trailing" constant="162" id="xrZ-7O-4p9"/>
                         </constraints>
                     </view>
@@ -200,84 +200,10 @@
                     <view key="view" contentMode="scaleToFill" id="Xk6-B9-AYe">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Photo" translatesAutoresizingMaskIntoConstraints="NO" id="wpg-rm-7me">
-                                <rect key="frame" x="16" y="91" width="70" height="70"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="70" id="7xx-dS-CKH"/>
-                                    <constraint firstAttribute="width" secondItem="wpg-rm-7me" secondAttribute="height" multiplier="1:1" id="loY-eh-iJF"/>
-                                </constraints>
-                            </imageView>
-                            <stackView opaque="NO" contentMode="left" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="kRz-8k-8kB" userLabel="Label Stack View">
-                                <rect key="frame" x="16" y="169" width="361" height="70"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Екатерина Новикова" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rkw-Md-AQh">
-                                        <rect key="frame" x="0.0" y="0.0" width="235" height="18"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="18" id="kbQ-Su-H05"/>
-                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="235" id="yAg-Br-Lr3"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" name="#FFFFFF"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@ekaterina_nov" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IWW-NP-AV6">
-                                        <rect key="frame" x="0.0" y="26" width="122.33333333333333" height="18"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="99" id="1Ff-4y-8J3"/>
-                                            <constraint firstAttribute="height" constant="18" id="ZCU-iw-QmD"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" name="#AEAFB4"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello, world!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oPb-Rn-HP3">
-                                        <rect key="frame" x="0.0" y="52" width="94.666666666666671" height="18"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="18" id="bJz-J5-BB7"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" name="#FFFFFF"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                            </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qr8-8E-i0J">
-                                <rect key="frame" x="333" y="104" width="44" height="44"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="mcZ-L2-4GM"/>
-                                    <constraint firstAttribute="width" constant="44" id="vT8-2g-V0P"/>
-                                </constraints>
-                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" title="" image="Exit">
-                                    <attributedString key="attributedTitle"/>
-                                </state>
-                                <connections>
-                                    <action selector="didTapLogoutButton:" destination="FCW-aR-6IU" eventType="touchUpInside" id="kH3-2H-e6P"/>
-                                </connections>
-                            </button>
-                        </subviews>
                         <viewLayoutGuide key="safeArea" id="D6s-uh-bRV"/>
                         <color key="backgroundColor" name="#1A1B22"/>
-                        <constraints>
-                            <constraint firstItem="wpg-rm-7me" firstAttribute="top" secondItem="D6s-uh-bRV" secondAttribute="top" constant="32" id="3hG-ec-LBT"/>
-                            <constraint firstItem="wpg-rm-7me" firstAttribute="leading" secondItem="D6s-uh-bRV" secondAttribute="leading" constant="16" id="PSA-cI-1cX"/>
-                            <constraint firstItem="D6s-uh-bRV" firstAttribute="trailing" secondItem="kRz-8k-8kB" secondAttribute="trailing" constant="16" id="SAq-dO-khD"/>
-                            <constraint firstItem="kRz-8k-8kB" firstAttribute="leading" secondItem="D6s-uh-bRV" secondAttribute="leading" constant="16" id="eYx-H1-ne6"/>
-                            <constraint firstItem="D6s-uh-bRV" firstAttribute="trailing" secondItem="kRz-8k-8kB" secondAttribute="trailing" constant="16" id="gSS-37-Tnq"/>
-                            <constraint firstItem="kRz-8k-8kB" firstAttribute="top" secondItem="wpg-rm-7me" secondAttribute="bottom" constant="8" id="gel-yT-bUY"/>
-                            <constraint firstItem="D6s-uh-bRV" firstAttribute="trailing" secondItem="qr8-8E-i0J" secondAttribute="trailing" constant="16" id="rxA-To-eme"/>
-                            <constraint firstItem="qr8-8E-i0J" firstAttribute="centerY" secondItem="wpg-rm-7me" secondAttribute="centerY" id="s9F-7F-FIk"/>
-                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="" image="tab_profile_active" id="0iK-M8-j2P"/>
-                    <connections>
-                        <outlet property="avatarImageView" destination="wpg-rm-7me" id="j2W-8I-Id9"/>
-                        <outlet property="descriptionLabel" destination="oPb-Rn-HP3" id="Gnf-xp-XGv"/>
-                        <outlet property="loginNameLabel" destination="IWW-NP-AV6" id="1ha-0h-67t"/>
-                        <outlet property="logoutButton" destination="qr8-8E-i0J" id="lMm-PU-bVy"/>
-                        <outlet property="nameLabel" destination="Rkw-Md-AQh" id="gJm-s7-uct"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wcm-ez-zrm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -287,17 +213,12 @@
     <resources>
         <image name="0" width="1600" height="1059"/>
         <image name="Backward" width="24" height="24"/>
-        <image name="Exit" width="24" height="24"/>
         <image name="No Active" width="42" height="42"/>
-        <image name="Photo" width="70" height="70"/>
         <image name="Sharing" width="51" height="51"/>
         <image name="tab_editorial_active" width="30" height="30"/>
         <image name="tab_profile_active" width="24" height="24"/>
         <namedColor name="#1A1B22">
             <color red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="#AEAFB4">
-            <color red="0.68235294117647061" green="0.68627450980392157" blue="0.70588235294117652" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="#FFFFFF">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
